adicionado documentacao, organizacao arquivos

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -427,7 +427,40 @@
       "|....||..............||... |\n",
       "||||||||||||||||||||||||||||\n",
       "\n",
-      "iterations='62', expanded='68', memory='6', time='0.0006575584411621094', path_cost='92', _start_time='1588206362.635612'\n",
+      "||||||||||||||||||||||||||||\n",
+      ".....||..............||.....\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||....||........||....||||\n",
+      "||||.||.||.||||||.||.||.||||\n",
+      "||||.||....||||||....||.||||\n",
+      ".....||.||.||||||.||.||.....\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|oooooooooooooooooooooooooo|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.||......||||||||......||o|\n",
+      "|.||.||||.||||||||.||||.||o|\n",
+      "|....||||.||||||||.||||oooo|\n",
+      "|||||||..............|||||||\n",
+      "|||||||.||||||||||||.|||||||\n",
+      "|.......|||||||||..........|\n",
+      "|.|||.||||........||||.|||.|\n",
+      "|.|||.||||.||||||.||||.|||.|\n",
+      "|.......||.||||||.||||.....|\n",
+      "|||||||.||.      ....|||||||\n",
+      "|||||||.||X||||||.||.|||||||\n",
+      "|....||.||.||||||.||.||....|\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||....||||||||||||....||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|....||..............||...P|\n",
+      "||||||||||||||||||||||||||||\n",
+      "\n",
+      "\n",
+      "iterations='62', expanded='68', memory='6', time='0.0006601810455322266', path_cost='92', _start_time='1588206501.4148138'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -468,6 +501,7 @@
     "maze = Maze(\"mazes/maze.txt\")\n",
     "problem = MazePacmanProblem(maze)\n",
     "print(maze)\n",
+    "maze.print_map()\n",
     "statistics, node = breadth_first_search(problem)\n",
     "print(statistics)\n",
     "maze.print_solution(node.solution())"
@@ -475,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -516,7 +550,40 @@
       "|....||..............||... |\n",
       "||||||||||||||||||||||||||||\n",
       "\n",
-      "iterations='95', expanded='104', memory='10', time='0.0010297298431396484', path_cost='162', _start_time='1588206362.6455317'\n",
+      "||||||||||||||||||||||||||||\n",
+      ".....||..............||.....\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||....||........||....||||\n",
+      "||||.||.||.||||||.||.||.||||\n",
+      "||||.||....||||||....||.||||\n",
+      ".....||.||.||||||.||.||.....\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|oooooooooooooooooooooooooo|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.||......||||||||......||o|\n",
+      "|.||.||||.||||||||.||||.||o|\n",
+      "|....||||.||||||||.||||oooo|\n",
+      "|||||||..............|||||||\n",
+      "|||||||.||||||||||||.|||||||\n",
+      "|.......|||||||||..........|\n",
+      "|.|||.||||........||||.|||.|\n",
+      "|.|||.||||.||||||.||||.|||.|\n",
+      "|.......||.||||||.||||.....|\n",
+      "|||||||.||.      ....|||||||\n",
+      "|||||||.||X||||||.||.|||||||\n",
+      "|....||.||.||||||.||.||....|\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||....||||||||||||....||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|....||..............||...P|\n",
+      "||||||||||||||||||||||||||||\n",
+      "\n",
+      "\n",
+      "iterations='95', expanded='104', memory='10', time='0.001069784164428711', path_cost='162', _start_time='1588206501.4250932'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -557,6 +624,7 @@
     "maze = Maze(\"mazes/maze.txt\")\n",
     "problem = MazePacmanProblem(maze)\n",
     "print(maze)\n",
+    "maze.print_map()\n",
     "statistics, node = depth_first_search(problem)\n",
     "print(statistics)\n",
     "maze.print_solution(node.solution())"
@@ -571,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -611,13 +679,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "||||||||||||||||||||||||||||\n",
+      ".....||..............||.....\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||....||........||....||||\n",
+      "||||.||.||.||||||.||.||.||||\n",
+      "||||.||....||||||....||.||||\n",
+      ".....||.||.||||||.||.||.....\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|oooooooooooooooooooooooooo|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.||......||||||||......||o|\n",
+      "|.||.||||.||||||||.||||.||o|\n",
+      "|....||||.||||||||.||||oooo|\n",
+      "|||||||..............|||||||\n",
+      "|||||||.||||||||||||.|||||||\n",
+      "|.......|||||||||..........|\n",
+      "|.|||.||||........||||.|||.|\n",
+      "|.|||.||||.||||||.||||.|||.|\n",
+      "|.......||.||||||.||||.....|\n",
+      "|||||||.||.      ....|||||||\n",
+      "|||||||.||X||||||.||.|||||||\n",
+      "|....||.||.||||||.||.||....|\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||....||||||||||||....||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|....||..............||...P|\n",
+      "||||||||||||||||||||||||||||\n",
+      "\n",
+      "\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -659,6 +760,7 @@
     "maze = Maze(\"mazes/maze.txt\")\n",
     "problem = MazePacmanProblem(maze)\n",
     "node = uniform_cost_search(problem)\n",
+    "maze.print_map()\n",
     "maze.print_solution(node.solution())\n",
     "print(len(node.solution()))"
    ]
@@ -672,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
