--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -679,80 +679,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "||||||||||||||||||||||||||||\n",
-      ".....||..............||.....\n",
-      "||||.||.||||||||||||.||.||||\n",
-      "||||.||.||||||||||||.||.||||\n",
-      "||||....||........||....||||\n",
-      "||||.||.||.||||||.||.||.||||\n",
-      "||||.||....||||||....||.||||\n",
-      ".....||.||.||||||.||.||.....\n",
-      "|.||.||.||........||.||.||.|\n",
-      "|.||.||.||||||||||||.||.||.|\n",
-      "|.||.||.||||||||||||.||.||.|\n",
-      "|oooooooooooooooooooooooooo|\n",
-      "|.|||||||.||||||||.|||||||o|\n",
-      "|.|||||||.||||||||.|||||||o|\n",
-      "|.||......||||||||......||o|\n",
-      "|.||.||||.||||||||.||||.||o|\n",
-      "|....||||.||||||||.||||oooo|\n",
-      "|||||||..............|||||||\n",
-      "|||||||.||||||||||||.|||||||\n",
-      "|.......|||||||||..........|\n",
-      "|.|||.||||........||||.|||.|\n",
-      "|.|||.||||.||||||.||||.|||.|\n",
-      "|.......||.||||||.||||.....|\n",
-      "|||||||.||.      ....|||||||\n",
-      "|||||||.||X||||||.||.|||||||\n",
-      "|....||.||.||||||.||.||....|\n",
-      "|.||.||.||........||.||.||.|\n",
-      "|.||....||||||||||||....||.|\n",
-      "|.||.||.||||||||||||.||.||.|\n",
-      "|....||..............||...P|\n",
-      "||||||||||||||||||||||||||||\n",
-      "\n",
-      "\n",
-      "||||||||||||||||||||||||||||\n",
-      ".....||..............||.....\n",
-      "||||.||.||||||||||||.||.||||\n",
-      "||||.||.||||||||||||.||.||||\n",
-      "||||....||........||....||||\n",
-      "||||.||.||.||||||.||.||.||||\n",
-      "||||.||....||||||....||.||||\n",
-      ".....||.||.||||||.||.||.....\n",
-      "|.||.||.||........||.||.||.|\n",
-      "|.||.||.||||||||||||.||.||.|\n",
-      "|.||.||.||||||||||||.||.||.|\n",
-      "|oooooooooooooooooooooooooo|\n",
-      "|.|||||||.||||||||.|||||||o|\n",
-      "|.|||||||.||||||||.|||||||o|\n",
-      "|.||......||||||||......||o|\n",
-      "|.||.||||.||||||||.||||.||o|\n",
-      "|....||||.||||||||.||||oooo|\n",
-      "|||||||..............|||||||\n",
-      "|||||||.||||||||||||.|||||||\n",
-      "|.......|||||||||..........|\n",
-      "|.|||.||||........||||.|||.|\n",
-      "|.|||.||||.||||||.||||.|||.|\n",
-      "|.......||.||||||.||||.....|\n",
-      "|||||||.||.      ++++|||||||\n",
-      "|||||||.||+||||||+||+|||||||\n",
-      "|....||.||+||||||+||+||....|\n",
-      "|.||.||.||++++++++||+||.||.|\n",
-      "|.||....||||||||||||++++||.|\n",
-      "|.||.||.||||||||||||.||+||.|\n",
-      "|....||..............||+++ |\n",
-      "||||||||||||||||||||||||||||\n",
-      "\n",
-      "\n",
-      "27\n"
+     "ename": "NameError",
+     "evalue": "name 'Maze' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3feaf0ee0cbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmaze\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMaze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"mazes/maze.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMazePacmanProblem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muniform_cost_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmaze\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmaze\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_solution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Maze' is not defined"
      ]
     }
    ],
@@ -766,13 +704,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hill climbing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -783,16 +714,40 @@
    "outputs": [],
    "source": [
     "def hill_climbing(problem):\n",
+    "    statistics = Statistics()\n",
     "    current = Node(problem.initial)\n",
     "    while True:\n",
+    "        statistics.update_iterations(1)\n",
     "        neighbors = current.expand(problem)\n",
     "        if not neighbors:\n",
     "            break\n",
-    "        neighbor = argmax_random_tie(neighbors, key=lambda node: problem.value(node.state))\n",
-    "        if problem.value(neighbor.state) <= problem.value(current.state):\n",
+    "        neighbor = argmin_random_tie(neighbors, key=lambda node: problem.value(node.state))\n",
+    "        if problem.value(neighbor.state) > problem.value(current.state):\n",
     "            break\n",
     "        current = neighbor\n",
-    "    return current.state"
+    "        statistics.update_expanded(1)\n",
+    "    statistics.finish(1)   \n",
+    "    return statistics, current"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hill climbing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maze = Maze(\"mazes/maze_himclimbing.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "print(maze)\n",
+    "statistics, node = hill_climbing(problem)\n",
+    "print(statistics)"
    ]
   }
  ],
@@ -812,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
