added new maze to compare hillclimbing

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -726,8 +726,10 @@
     "            break\n",
     "        current = neighbor\n",
     "        statistics.update_expanded(1)\n",
-    "    statistics.finish(1)   \n",
-    "    return statistics, current"
+    "    statistics.finish(1)\n",
+    "    if problem.goal_test(current.state):\n",
+    "        return statistics, current\n",
+    "    return statistics, None"
    ]
   },
   {
@@ -747,7 +749,15 @@
     "problem = MazePacmanProblem(maze)\n",
     "print(maze)\n",
     "statistics, node = hill_climbing(problem)\n",
-    "print(statistics)"
+    "print(statistics)\n",
+    "print(node)\n",
+    "\n",
+    "maze = Maze(\"mazes/maze_himclimbing_2.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "print(maze)\n",
+    "statistics, node = hill_climbing(problem)\n",
+    "print(statistics)\n",
+    "print(node)"
    ]
   }
  ],
