--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -460,7 +460,7 @@
       "||||||||||||||||||||||||||||\n",
       "\n",
       "\n",
-      "iterations='62', expanded='68', memory='6', time='0.0006601810455322266', path_cost='92', _start_time='1588206501.4148138'\n",
+      "iterations='62', expanded='68', memory='6', time='0.0022902488708496094', path_cost='92', _start_time='1588363694.7392058'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -583,7 +583,7 @@
       "||||||||||||||||||||||||||||\n",
       "\n",
       "\n",
-      "iterations='95', expanded='104', memory='10', time='0.001069784164428711', path_cost='162', _start_time='1588206501.4250932'\n",
+      "iterations='95', expanded='104', memory='10', time='0.003448009490966797', path_cost='162', _start_time='1588363694.8059971'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -679,18 +679,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Maze' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-3feaf0ee0cbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmaze\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMaze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"mazes/maze.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMazePacmanProblem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muniform_cost_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmaze\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmaze\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_solution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Maze' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "||||||||||||||||||||||||||||\n",
+      ".....||..............||.....\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||....||........||....||||\n",
+      "||||.||.||.||||||.||.||.||||\n",
+      "||||.||....||||||....||.||||\n",
+      ".....||.||.||||||.||.||.....\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|oooooooooooooooooooooooooo|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.||......||||||||......||o|\n",
+      "|.||.||||.||||||||.||||.||o|\n",
+      "|....||||.||||||||.||||oooo|\n",
+      "|||||||..............|||||||\n",
+      "|||||||.||||||||||||.|||||||\n",
+      "|.......|||||||||..........|\n",
+      "|.|||.||||........||||.|||.|\n",
+      "|.|||.||||.||||||.||||.|||.|\n",
+      "|.......||.||||||.||||.....|\n",
+      "|||||||.||.      ....|||||||\n",
+      "|||||||.||X||||||.||.|||||||\n",
+      "|....||.||.||||||.||.||....|\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||....||||||||||||....||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|....||..............||...P|\n",
+      "||||||||||||||||||||||||||||\n",
+      "\n",
+      "\n",
+      "||||||||||||||||||||||||||||\n",
+      ".....||..............||.....\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||.||.||||||||||||.||.||||\n",
+      "||||....||........||....||||\n",
+      "||||.||.||.||||||.||.||.||||\n",
+      "||||.||....||||||....||.||||\n",
+      ".....||.||.||||||.||.||.....\n",
+      "|.||.||.||........||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|.||.||.||||||||||||.||.||.|\n",
+      "|oooooooooooooooooooooooooo|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.|||||||.||||||||.|||||||o|\n",
+      "|.||......||||||||......||o|\n",
+      "|.||.||||.||||||||.||||.||o|\n",
+      "|....||||.||||||||.||||oooo|\n",
+      "|||||||..............|||||||\n",
+      "|||||||.||||||||||||.|||||||\n",
+      "|.......|||||||||..........|\n",
+      "|.|||.||||........||||.|||.|\n",
+      "|.|||.||||.||||||.||||.|||.|\n",
+      "|.......||.||||||.||||.....|\n",
+      "|||||||.||.      ++++|||||||\n",
+      "|||||||.||+||||||+||+|||||||\n",
+      "|....||.||+||||||+||+||....|\n",
+      "|.||.||.||++++++++||+||.||.|\n",
+      "|.||....||||||||||||++++||.|\n",
+      "|.||.||.||||||||||||.||+||.|\n",
+      "|....||..............||+++ |\n",
+      "||||||||||||||||||||||||||||\n",
+      "\n",
+      "\n",
+      "27\n"
      ]
     }
    ],
@@ -705,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -741,9 +803,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|||||||||||\n",
+      "|. .......|\n",
+      "|.........|\n",
+      "|.o.......|\n",
+      "|..oo.....|\n",
+      "|....oo...|\n",
+      "|......oo.|\n",
+      "|........ |\n",
+      "|||||||||||\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-9b4fe793a00d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMazePacmanProblem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mstatistics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhill_climbing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstatistics\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-22-7dd6105a77f2>\u001b[0m in \u001b[0;36mhill_climbing\u001b[0;34m(problem)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mneighbor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margmin_random_tie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/unicamp/mc906/aima/utils.py\u001b[0m in \u001b[0;36margmin_random_tie\u001b[0;34m(seq, key)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0margmin_random_tie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m     \u001b[0;34m\"\"\"Return a minimum element of seq; break ties at random.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshuffled\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-22-7dd6105a77f2>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(node)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mneighbor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margmin_random_tie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/unicamp/mc906/aima/search.py\u001b[0m in \u001b[0;36mvalue\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m     60\u001b[0m         \"\"\"For optimization problems, each state has a value. Hill Climbing\n\u001b[1;32m     61\u001b[0m         and related algorithms try to maximize this value.\"\"\"\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "maze = Maze(\"mazes/maze_himclimbing.txt\")\n",
     "problem = MazePacmanProblem(maze)\n",
