Adding A* search algorithm with 2 heuristics

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Observações de implementação \n",
     "\n",
-    "- Mapas são registrados em um arquivo *.txt* e deve formatado corretamente com o mesmo número de caracteres em cada linha, apenas um pacman - posicao inicial (P) e pelo menos um objetivo (X)\n",
+    "- Mapas são registrados em um arquivo *.txt* e deve ser formatado corretamente com o mesmo número de caracteres em cada linha, apenas um pacman - posicao inicial (P) e pelo menos um objetivo (X)\n",
     "\n",
     "- Estado definido por tupla (x, y) - posição no mapa\n",
     "\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -460,7 +460,7 @@
       "||||||||||||||||||||||||||||\n",
       "\n",
       "\n",
-      "iterations='62', expanded='68', memory='6', time='0.0006601810455322266', path_cost='92', _start_time='1588206501.4148138'\n",
+      "iterations='62', expanded='68', memory='6', time='0.0013208389282226562', path_cost='92', _start_time='1588360234.1760426'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -583,7 +583,7 @@
       "||||||||||||||||||||||||||||\n",
       "\n",
       "\n",
-      "iterations='95', expanded='104', memory='10', time='0.001069784164428711', path_cost='162', _start_time='1588206501.4250932'\n",
+      "iterations='95', expanded='104', memory='10', time='0.002312183380126953', path_cost='162', _start_time='1588360234.2099922'\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -679,13 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10\n",
+      "28\n",
+      "31\n",
       "||||||||||||||||||||||||||||\n",
       ".....||..............||.....\n",
       "||||.||.||||||||||||.||.||||\n",
@@ -774,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -793,6 +796,85 @@
     "            break\n",
     "        current = neighbor\n",
     "    return current.state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A* search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def manhatan_distance(problem, n):\n",
+    "    goal_i = problem.goal[0][1]\n",
+    "    goal_j = problem.goal[0][0]\n",
+    "    n_j = n.state[0]\n",
+    "    n_i = n.state[1]\n",
+    "    return abs(n_j - goal_j) + abs(n_i - goal_i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def h(problem, n):\n",
+    "    '''Essa heuristica conta o numero de obstaculos entre o nó atual e o nó objetivo,\n",
+    "    supõe-se que quanto menos obstaculo, melhor será'''\n",
+    "    goal_i = problem.goal[0][1]\n",
+    "    goal_j = problem.goal[0][0]\n",
+    "    n_j = n.state[0]\n",
+    "    n_i = n.state[1]\n",
+    "    total = 0\n",
+    "    \n",
+    "    # seleciona todas as linhas do labirinto entre as posições do nó e do objetivo\n",
+    "    if goal_i < n_i:\n",
+    "        sub_maze_lines = problem.maze._maze[goal_i:n_i]\n",
+    "    else:\n",
+    "        sub_maze_lines = problem.maze._maze[n_i:goal_i]\n",
+    "    \n",
+    "    # para cada linha verifica entre as colunas do nó e do objetivo, quantos obstaculos existem\n",
+    "    for line in sub_maze_lines:\n",
+    "        if goal_j < n_j:\n",
+    "            sub_maze_columns = line[goal_j:n_j]\n",
+    "        else:\n",
+    "            sub_maze_columns = line[n_j:goal_j]\n",
+    "        total += sub_maze_columns.count(PosType.GHOST.value)\n",
+    "        total += sub_maze_columns.count(PosType.WALL.value)\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def astar_search(problem, h=None, display=False):\n",
+    "    return best_first_graph_search(problem, lambda n: n.path_cost + h(problem, n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maze = Maze(\"mazes/maze.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "node_h1 = astar_search(problem, manhatan_distance)\n",
+    "node_h2 = astar_search(problem, h)\n",
+    "maze.print_map()\n",
+    "# maze.print_solution(node.solution())\n",
+    "print(len(node_h1.solution()))\n",
+    "print(len(node_h2.solution()))"
    ]
   }
  ],
