--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -1624,6 +1624,25 @@
    "source": [
     "#### Análise BFS, DFS, A* ... em gráficos para diferentes posições aleatórias"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bibliografia\n",
+    "1. RUSSEL, S.; NORVIG, P. Artificial Intelligence:  a modern approach.  Prentice Hall.  3rd edition, 2010.\n",
+    "2. https://github.com/aimacode/aima-python/blob/master/search.ipynb\n",
+    "\n",
+    "\n",
+    "# Divisão das tarefas\n",
+    "|           | Mapas  | DFS  | BFS  | Best-First  | Hill-Climbing | A* | Análise dos resultados | Relatório |\n",
+    "|-----------|--------|------|------|-------------|---------------|----|------------------------|-----------|\n",
+    "| Anderson  |   X    |      |      |             |               |    |                        |           |\n",
+    "| Diego     |        |      |      |             |               |    |                        |           |\n",
+    "| Guilherme |        |      |      |             |               |  X |                        |     X     |\n",
+    "| Heitor    |        |      |      |             |               |    |                        |           |\n",
+    "| Yuri      |        |      |      |             |               |    |                        |           |"
+   ]
   }
  ],
  "metadata": {
