--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -927,7 +927,31 @@
     "    return ldistance_trans(pos, maze, 2)\n",
     "\n",
     "def h_euclidean_distance(pos, maze):\n",
-    "    return ldistance(pos, maze, 2)"
+    "    return ldistance(pos, maze, 2)\n",
+    "\n",
+    "def h_number_of_obstacles(pos, maze):\n",
+    "    '''Essa heuristica conta o numero de obstaculos entre o nó atual e o nó objetivo,\n",
+    "    supõe-se que quanto menos obstaculo, melhor será'''\n",
+    "    \n",
+    "    distances = []\n",
+    "    for goal in maze.goal_states:\n",
+    "        total = 0\n",
+    "        # seleciona todas as linhas do labirinto entre as posições do nó e do objetivo\n",
+    "        if goal[1] < pos[1]:\n",
+    "            sub_maze_lines = maze._maze[goal[1]:pos[1]]\n",
+    "        else:\n",
+    "            sub_maze_lines = maze._maze[pos[1]:goal[1]]\n",
+    "\n",
+    "        # para cada linha verifica entre as colunas do nó e do objetivo, quantos obstaculos existem\n",
+    "        for line in sub_maze_lines:\n",
+    "            if goal[0] < pos[0]:\n",
+    "                sub_maze_columns = line[goal[0]:pos[0]]\n",
+    "            else:\n",
+    "                sub_maze_columns = line[pos[0]:goal[0]]\n",
+    "            total += sub_maze_columns.count(PosType.GHOST.value)\n",
+    "            total += sub_maze_columns.count(PosType.WALL.value)\n",
+    "        distances.append(total)\n",
+    "    return min(distances)"
    ]
   },
   {
@@ -1150,7 +1174,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A* search"
+    "# A* search\n",
+    "Essa é a forma de 'best-first search' mais conhecida e utilizada, ela combina as funções *g(n)* (custo para alcançar o nó desde a origem) e *h(n)* (uma heurística que estima o menor custo do nó até a meta), ou seja, *f(n) = g(n) + h(n)*. \\\n",
+    "Esse algoritmo deve ser completo (encontrar uma solução) e ótimo. Para ser ótimo a heurística *h(n)* escolhida deve satisfazer 2 condições:\\\n",
+    "**1- Ser admissível:** nunca sobrestimar o custo para atingir o objetivo. Ao combinar *g(n)* garantimos que no pior caso a solução do problema é custo para alcançar o objetivo desde a origem, portanto a heurística escolhida deverá sempre ser otimista e tentar encontrar uma solução que seja mais rápida \\\n",
+    "**2- Ser consistente:** Se para cada nó *n* e para cada sucessor *n'* de *n* gerado por uma ação *a*, o custo estimado para alcançar *n* não é maior que o custo para alcançar *n'* mais o custo estimado para alncaçar o objetivo a partir de *n'*, essa é uma forma geral da desigualdade de triângulo *h(n) <= c(n, a, n') + h(n')*\n",
+    "\n",
+    "Vamos propor 3 heurísticas para a solução do problema, para cada uma delas verificamos se as 2 condições são satisfeitas e portanto se a heurística proposta é válida. Definindo os pontos A=(xa,ya) como o posição atual do pacman no labirinto e T=(xt, yt) como a posição objetivo. As heurísticas são as seguintes: \\\n",
+    "**1- Distância de manhattan:** calculamos a distância da posição atual com a meta nos eixos x e y e somamos considerando o mapa como transversável por todos os lados. A menor distância supomos ser a que nos levara mais rápida a solução. \\\n",
+    "**2- Distância euclidiana:** calculamos a distância eucliadana dos pontos A e T. Essa heurística é admissível pois a distância entre 2 pontos qualquer é sempre uma linha reta \\\n",
+    "**3- Menor número de obstáculos:** calculamos o número de obstáculos (fantasmas e paredes) na região entre os pontos A e T, quanto menor o número de obstáculos supomos ser mais rápido de encontrar "
    ]
   },
   {
@@ -1174,7 +1207,8 @@
     "analysis_mazes(['maze2.txt'], \n",
     "               [[uniform_cost_search, 'Uniform cost search'],\n",
     "                [astar_search, 'A* search - manhattan', h_manhattan_distance_trans],\n",
-    "                [astar_search, 'A* search - euclidean', h_euclidean_distance_trans]])"
+    "                [astar_search, 'A* search - euclidean', h_euclidean_distance_trans],\n",
+    "                [astar_search, 'A* search - number of obstacles', h_number_of_obstacles]])"
    ]
   },
   {
@@ -2310,79 +2344,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A* search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def h_manhatan_distance(problem, n):\n",
-    "    goal_i = problem.goal[0][1]\n",
-    "    goal_j = problem.goal[0][0]\n",
-    "    n_j = n.state[0]\n",
-    "    n_i = n.state[1]\n",
-    "    return abs(n_j - goal_j) + abs(n_i - goal_i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def h(problem, n):\n",
-    "    '''Essa heuristica conta o numero de obstaculos entre o nó atual e o nó objetivo,\n",
-    "    supõe-se que quanto menos obstaculo, melhor será'''\n",
-    "    goal_i = problem.goal[0][1]\n",
-    "    goal_j = problem.goal[0][0]\n",
-    "    n_j = n.state[0]\n",
-    "    n_i = n.state[1]\n",
-    "    total = 0\n",
-    "    \n",
-    "    # seleciona todas as linhas do labirinto entre as posições do nó e do objetivo\n",
-    "    if goal_i < n_i:\n",
-    "        sub_maze_lines = problem.maze._maze[goal_i:n_i]\n",
-    "    else:\n",
-    "        sub_maze_lines = problem.maze._maze[n_i:goal_i]\n",
-    "    \n",
-    "    # para cada linha verifica entre as colunas do nó e do objetivo, quantos obstaculos existem\n",
-    "    for line in sub_maze_lines:\n",
-    "        if goal_j < n_j:\n",
-    "            sub_maze_columns = line[goal_j:n_j]\n",
-    "        else:\n",
-    "            sub_maze_columns = line[n_j:goal_j]\n",
-    "        total += sub_maze_columns.count(PosType.GHOST.value)\n",
-    "        total += sub_maze_columns.count(PosType.WALL.value)\n",
-    "    return total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def astar_search(problem, h=None, display=False):\n",
-    "    return best_first_graph_search(problem, lambda n: n.path_cost + h(problem, n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maze = Maze(\"mazes/maze.txt\")\n",
-    "problem = MazePacmanProblem(maze)\n",
-    "node_h1 = astar_search(problem, h_manhatan_distance)\n",
-    "node_h2 = astar_search(problem, h)\n",
-    "maze.print_map()\n",
-    "maze.print_solution(node_h1.solution())\n",
-    "print(len(node_h1.solution()))\n",
-    "print(len(node_h2.solution()))"
+    "# Bibliografia\n",
+    "1. RUSSEL, S.; NORVIG, P. Artificial Intelligence:  a modern approach.  Prentice Hall.  3rd edition, 2010.\n",
+    "2. https://github.com/aimacode/aima-python/blob/master/search.ipynb\n",
+    "\n",
+    "\n",
+    "# Divisão das tarefas\n",
+    "|           | Mapas  | DFS  | BFS  | Best-First  | Hill-Climbing | A* | Análise dos resultados | Relatório |\n",
+    "|-----------|--------|------|------|-------------|---------------|----|------------------------|-----------|\n",
+    "| Anderson  |   X    |  X   |  X   |             |               | X  |                        |     X     |\n",
+    "| Diego     |        |      |      |      X      |               |    |                        |     X     |\n",
+    "| Guilherme |        |      |      |             |               | X  |                        |     X     |\n",
+    "| Heitor    |   X    |      |      |             |      X        |    |                        |     X     |\n",
+    "| Yuri      |        |      |      |             |               |    |        X               |     X     |"
    ]
   }
  ],
@@ -2403,7 +2377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
