Added new maps to test hill climbing and discussion about it

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 180,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 183,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 184,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 188,
    "metadata": {
     "scrolled": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 189,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1428,17 +1428,53 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# TODO, discussão "
+    "maze = Maze(\"mazes/simple_pattern_obstacles_small_trans.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "statistics, node = hill_climbing(problem, display=True)\n",
+    "print(statistics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maze = Maze(\"mazes/maze2.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "statistics, node = hill_climbing(problem, display=True)\n",
+    "print(statistics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maze = Maze(\"mazes/simple_pattern_obstacles_small.txt\")\n",
+    "problem = MazePacmanProblem(maze)\n",
+    "statistics, node = hill_climbing(problem, display=True)\n",
+    "print(statistics)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussão do Hill Climbing, limitações, vantagens em relação aos outros, desvantagens, como melhorar a implementação"
+    "Observa-se que o Hill Climbing na maior parte dos experimentos executados ele não conseguiu atingir o objetivo final.\n",
+    "Podemos perceber que por conta da heurística adotada para o cálculo da proximidade do objetivo, neste caso o cálculo da distância de manhattan,\n",
+    "no momento em que foi necessário avaliar opções de caminho para desviar de obstáculos o algoritmo entra em um estado de “mínimo local”, uma vez que para tomar a ação de desvio é necessário se afastar do objetivo final. Os casos em que foi possível atingir o objetivo foram os que em nenhum momento do percurso foi necessário se afastar do objetivo final.\n",
+    "Com isso, fica claro a limitação da implementação clássica do algoritmo de Hill Climbing para o alcance do objetivo final, mesmo usando uma heurística que é adequada para em algoritmos. Para alcançarmos um melhor melhor desempenho do Hill Climbing, em questão de alcance do resultado, podemos considerar heurísticas parametrizadas, que dependendo da situação poderíamos escolher entre minimizar (ou maximizar) o resultado da avaliação de formas diferentes para ter outras comparações ao chegar em um estado de mínimos local. Outra opção para sairmos do estado de “mínimo local” seria utilizar o algoritmo “Forced Hill Climbing” que permitira que saíssemos do estado atual em busca de um estado melhor usando BFS.\n",
+    "\n",
+    "No resultados analisados, pudemos observar algumas boas característica do Hill Climbing. Como é o caso da quantidade de nós expandidos e o uso de memória.\n",
+    "Vimos que o número de nós visitados cresce linearmente com o número de iterações, o que otimiza o custo computacional usado para encontrá-la.\n",
+    "O uso da memória do algoritmo Hill Climbing se mostrou ótimo, ele se mantém constante independente do tamanho do mapa ou do número de nós expandidos, visto que não há armazenamentos de estados anteriores."
    ]
   },
   {
@@ -2646,7 +2682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   },
   "mimetype": "text/x-python",
   "name": "python",
