Improved some notes of graph analysis

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -1810,8 +1810,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fica claro o comportamento \"imprevisível\" da *Depth First Search*. Dado que esta busca se extende pela profundidade e é um algoritmo não informado, a escolha de próxima ação é arbitrária. Desta forma, o tamanho do caminho escolhido (consequentemente, o número de iterações) depende do quão convinente é a posição do objetivo.\n",
-    "Por outro lado, analisando *Breadth First Search*, vemos um comportamento muito semelhante ao de algortimos informados. Dado que esta cresce em largura, temos independente da posição do objetivo, uma escolha sempre de melhor caminho."
+    "Fica claro o comportamento \"imprevisível\" da *Depth First Search*. Dado que esta busca se extende pela profundidade e é um algoritmo não informado, a escolha de próxima ação é arbitrária. Desta forma, o tamanho do caminho escolhido (consequentemente, o número de iterações) depende do quão convinente é a posição do objetivo, ou seja, o quão próxima está do caminho de crescimento do algoritmo.\n",
+    "Por outro lado, analisando *Breadth First Search*, vemos um comportamento muito semelhante ao de algortimos informados. Dado que este algortimo crescre em largura, é esperado que o aumento da distância aumente o número de iterações necessárias para cálculo do caminho. A distância é análoga a distância euclidiana, ou seja, para obter um caminho de distância *D = d - 1* precisamos, antes, calcular todos os caminhos de distância *d*."
    ]
   },
   {
@@ -2495,14 +2495,9 @@
     "A distância de manhattan é a soma entre a altura e largura entre a posição do Pacman e a posição do objetivo.\n",
     "Geograficamente, a diferença entre elas é a seguinte:\n",
     "![image.png](attachment:image.png)\n",
+    "Figura extraída de https://mineracaodedados.wordpress.com/2012/02/27/medidas-de-distancia/\n",
+    "\n",
     "Pelo cálculo das distâncias conseguimos concluir que a distância euclidiana sofre variações menores quando as posicões se alteram, o que se reflete nos gráficos: para uma mesma distância há valores de iterações bem mais distintos para a distância de manhattan."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Figura extraída de https://mineracaodedados.wordpress.com/2012/02/27/medidas-de-distancia/"
    ]
   },
   {
@@ -2682,7 +2677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
