Adds improved comments on graph analysis.

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -2179,6 +2179,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Como esparado para o *Depth First Search*, o comportamento foi bastante esparço e pouco previsível. Entretanto, os outros algoritmos mostraram um comportamento menos linear em comparação ao visto nos experimentos anteriores. É possível identificar um crescimento quadrático no *Breadth First Search*, *Uniform Cost Search* e *A**, que se aproxima da complexidade esperada (Exponencial, no caso do *Breadth First Search*).\n",
+    "O *Best First Search* por sua vez, manteve-se linear, concluindo-se que podemos considerar que este compartamento é esperado para este algoritmo neste tipo de labirinto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Distância euclidiana x Distância de manhattan"
    ]
   },
